--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,7 +6,7 @@
 
 {{ range .Data.Pages }}
 <div>
-  <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
+  <h3><a href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
   <div>
     {{ if .Params.summary }}
     {{ printf "%s" .Params.summary | markdownify }}
