Add an optional table of contents to single.html

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -21,6 +21,11 @@
     {{ end }}
   </div>
 
+  {{ if .Params.toc }}
+  <h1 id="toc">Table of Contents</h1>
+  {{ .TableOfContents }}
+  {{ end }}
+
   {{ .Content }}
 
 </div>
