--- a/layouts/partials/tagged_comma_list.html
+++ b/layouts/partials/tagged_comma_list.html
@@ -4,7 +4,7 @@
 <span>
   | {{ $tag | safeHTML }}:
   {{ range $k, $v := .list }}
-  <a href="{{ printf "/%s%/" $tag | relLangURL }}{{ . | urlize | lower }}">{{ . }}</a>
+  <a href="{{ printf "/%s/" $tag | relLangURL }}{{ . | urlize | lower }}">{{ . }}</a>
   {{ if lt $k (sub $listLen 1) }}, {{ end }}
   {{ end }}
 </span>
