--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme" content="hugo-ugly">
     <meta name="author" content="{{ .Site.Params.author }}">
-    {{ .Hugo.Generator }}
+    {{ hugo.Generator }}
 
     {{- if .Description -}}
     {{- .Scratch.Set "description" .Description -}}
