--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -30,9 +30,9 @@
     <script async src="//cdnjs.cloudflare.com/ajax/libs/autotrack/2.4.1/autotrack.js" integrity="sha512-HUmooslVKj4m6OBu0OgzjXXr+QuFYy/k7eLI5jdeEy/F4RSgMn6XRWRGkFi5IFaFgy7uFTkegp3Z0XnJf3Jq+g==" crossorigin="anonymous"></script>
     {{ end }}
 
-    {{ if or .Site.RSSLink .RSSLink }}
-    <link rel="alternate" href="{{ .RSSLink | default .Site.RSSLink  }}" type="application/rss+xml" title="{{ .Site.Title }}">
-    <link rel="feed" href="{{ .RSSLink | default .Site.RSSLink }}" type="application/rss+xml" title="{{ .Site.Title }}">
+    {{ with .OutputFormats.Get "rss" }}
+    <link rel="alternate" href="{{ .Permalink  }}" type="application/rss+xml" title="{{ $.Site.Title }}">
+    <link rel="feed" href="{{ .Permalink }}" type="application/rss+xml" title="{{ $.Site.Title }}">
     {{ end }}
 
     <link rel="manifest" href="{{ "site.webmanifest" | relURL }}">
