Add disqus opt-in.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -28,6 +28,10 @@
 
   {{ .Content }}
 
+  {{ if .Params.disqus }}
+  {{ template "_internal/disqus.html" . }}
+  {{ end }}
+
 </div>
 
 {{ partial "footer.html" . }}
