--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -14,6 +14,9 @@
     {{- .Scratch.Set "description" .Summary -}}
     {{- end }}
     <meta name="description" content="{{ .Scratch.Get "description" }}">
+    {{ if $.Param "twitter_card" }}
+    {{ template "_internal/twitter_cards.html" . }}
+    {{ end }}
 
     {{ if .Site.GoogleAnalytics }}
     <script>
